# MiniKV

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: benches.rs
benches_result/criterion_p3/data/main/read bench/kvs read/: benchmark.cbor  measurement_220413182548.cbor  measurement_220413185251.cbor  measurement_220413194537.cbor
benches_result/criterion_p3/data/main/read bench/sled read/: benchmark.cbor  measurement_220413185314.cbor  measurement_220413194555.cbor
benches_result/criterion_p3/report/: index.html
benches_result/criterion_p3/reports/: index.html
benches_result/criterion_p3/reports/read bench/: index.html
benches_result/criterion_p3/reports/read bench/kvs read/: history.html  index.html
benches_result/criterion_p3/reports/read bench/sled read/: history.html  index.html
benches_result/criterion_p3/reports/write bench/: index.html
benches_result/criterion_p3/reports/write bench/kvs write/: history.html  index.html
benches_result/criterion_p3/reports/write bench/sled write/: history.html  index.html
benches_result/criterion_p3/write bench/kvs write/base/: benchmark.json  sample.json  tukey.json
benches_result/criterion_p3/write bench/kvs write/change/: estimates.json
benches_result/criterion_p3/write bench/kvs write/new/: estimates.json  raw.csv
benches_result/criterion_p3/write bench/kvs write/report/: index.html
benches_result/criterion_p3/write bench/report/: index.html
src/: client.rs  err.rs  kv.rs  kvs.rs  lib.rs  proto.rs  server.rs
src/kvse/: kvs.rs  mod.rs  sled.rs
src/serde/: de.rs  ser.rs
src/thread_pool/: mod.rs  naive_thread_pool.rs  rayon.rs  shared_queue.rs
tests/: kv_store.rs
(+8 files in other folders)
