[package]
name = "kvs"
authors = ["Kai Chen <ck770701780@hotmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A key-value store"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"