[package]
name = "kvs"
authors = ["Kai Chen <ck770701780@hotmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A key-value store"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.132"
serde_json = "1.0.73"
structopt = "0.3.25"
thiserror = "1.0.30"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[features]
