[package]
name = "kvs"
authors = ["Kai Chen <ck770701780@hotmail.com>"]
version = "0.1.1"
edition = "2021"
description = "A key-value store"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
clap = { version = "3.0.5", features = ["derive"] }
thiserror = "1.0.30"
sloggers = "2.1.1"
slog = "2.7.0"


[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[features]
